test/scc/pp/errors/046.a
046.t:2:13: error: extra tokens at end of #elif directive